syntax = "proto3";

package users.v1;

service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  int32 age = 5;
  UserStatus status = 6;
  UserRole role = 7;
  int64 created_at = 8;
  string department = 9;
  int64 salary = 10;
}

enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_ACTIVE = 1;
  USER_STATUS_INACTIVE = 2;
  USER_STATUS_PENDING = 3;
}

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_ADMIN = 1;
  USER_ROLE_USER = 2;
  USER_ROLE_MODERATOR = 3;
}

message ListUsersRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  string next_page_token = 2;
  bool has_more = 3;
  int32 total_count = 4;
}
